-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
5.15.7
-
784e04067 (dev), 98193f1bb (6.6), 9e6381021 (6.5)
Analysis and debugging showed that the value of the 'parentItem()->window()' variable at the moment of its use is equal to null.
Using variable with null value lead to crash.
This issue occurs because two points are used for flow control on the UI side: one point is a finger, the second is voice control.
Therefore, the first point after the transfer of control to the second point has a removed/nullptr object. To avoid using a null variable, need to check the value and direct the processing flow in the correct direction.
/src/quick/handlers/qquickpointerhandler.cpp
333 bool QQuickPointerHandler::approveGrabTransition(QQuickEventPoint *point, QObject *proposedGrabber)
334 {
...
351 QQuickWindowPrivate *winPriv = QQuickWindowPrivate::get(parentItem()->window());